--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 /app/build/
 /app/.gradle/
 /app.iml
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+**/logs/
+
+.settings
+bin
+.project*
+.classpath
+.idea/
+.factorypath
